<resources>
    <!-- App name .............................................................................. -->
    <string name="app_name">TrendyMovies</string>
    <string name="developer_alias">\@jsmirabal</string>
    <string name="content_authority">japps.trendymovies</string>

    <!-- Activity titles ....................................................................... -->
    <string name="title_movie_detail_activity">Movie Detail</string>

    <!-- Action keys ........................................................................... -->
    <string name="action_settings">Settings</string>
    <string name="action_navigation_drawer_open">Open navigation drawer</string>
    <string name="action_navigation_drawer_close">Close navigation drawer</string>

    <!-- Tab labels ............................................................................ -->
    <string name="tab_overview">Overview</string>
    <string name="tab_details">Details</string>
    <string name="tab_trailers">Trailers</string>
    <string name="tab_reviews">Reviews</string>
    <string name="trending_nav_label">Trending</string>
    <string name="top_rated_nav_label">Top Rated</string>
    <string name="upcoming_nav_label">Upcoming</string>
    <string name="favourites_nav_label">Favourites</string>
    <string name="now_playing_nav_label">Now Playing</string>
    <string name="revenue_nav_label">Revenue</string>

    <!-- Prepared messages ..................................................................... -->
    <string name="no_trailer_string">There is not trailer available for this language.</string>
    <string name="no_review_string">There are not reviews available for this language.</string>
    <string name="action_favourite">FAV</string>
    <string name="action_pages">Pages</string>
    <string name="action_search">Search</string>

    <!-- Dummy data ............................................................................ -->

</resources>
