<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trending"
            android:checked="true"
            android:icon="@drawable/trending"
            android:title="@string/trending_nav_label" />
        <item
            android:id="@+id/nav_top_rated"
            android:icon="@drawable/ic_icons_favorite"
            android:title="@string/top_rated_nav_label" />
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/upcoming"
            android:title="@string/upcoming_nav_label" />
        <item
            android:id="@+id/nav_now_playing"
            android:icon="@drawable/ic_icons_play"
            android:title="@string/now_playing_nav_label" />
        <item
            android:id="@+id/nav_revenue"
            android:icon="@drawable/ic_coin_dollar"
            android:title="@string/revenue_nav_label" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_heart"
            android:title="@string/favourites_nav_label" />
    </group>

</menu>
